@@ -1,4 +1,4 @@
-Date: Fri, 30 Jul 2021 12:55:59 +0000
+Date: Wed, 11 Aug 2021 10:03:04 +0000
 Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
 Content-Type: application/x-phpwiki;
   pagename=ReleaseNotes;
@@ -11,7 +11,7 @@ Content-Transfer-Encoding: binary
 == 1.6.0 2021-08-XX Marc-Etienne Vargenau ==
 
 Major release:
-* PHP 7 and 8 compatible (works from PHP 5.3.3 to PHP 8)
+* PHP 7 and 8 compatible (works from PHP 5.3.3 to PHP 8.0)
 * Full HTML 5: Add HTML 5 <main> <header> <footer> <nav> in all themes. Add ARIA roles.
 * Flash is dead
 * Internet Explorer is dead
@@ -28,6 +28,7 @@ Major release:
 * Security fixes
 
 === Changes ===
+* All revisions are kept.
 * Add new button in Edit Toolbar: convert Tab Separated Values to Wikicreole table
 * Update jQuery to 2.2.4
 * Pear: use ##mysqli## instead of ##mysql##
